--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -16,7 +16,7 @@ body {
 	position: relative;
 	max-width: 100vw;
 	max-height: 100vh;
-	overflow: hidden;
+	overflow: hidden auto;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,5 +30,5 @@ body {
 body {
 	@apply w-screen h-screen;
 	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+	/* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
 }
