--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -29,6 +29,6 @@ body {
 
 body {
 	@apply w-screen h-screen;
-	color: rgb(var(--foreground-rgb));
+	/* color: rgb(var(--foreground-rgb)); */
 	/* background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
 }
